Fix issue where selected text is hard to read on some themes

--- a/media/style.css
+++ b/media/style.css
@@ -493,6 +493,7 @@ body {
 
 .is-selected {
   background-color: var(--vscode-list-activeSelectionBackground);
+  color: var(--vscode-list-activeSelectionForeground);
   border-top: 1px solid var(--vscode-focusBorder);
   border-bottom: 1px solid var(--vscode-focusBorder);
 }
